--- a/app/css/main.css
+++ b/app/css/main.css
@@ -129,6 +129,10 @@ input {
   margin-right: 35px;
 }
 
+.menu-menu ul li a:hover {
+  color: #FFFFFF;
+}
+
 .menu-menu ul li .contactmob {
   margin-top: 4px;
   float: right;
@@ -194,6 +198,7 @@ input {
 }
 
 .head-text_butt {
+  margin-bottom: 20px;
   margin-top: 32px;
 }
 
@@ -927,6 +932,10 @@ h4 {
     -ms-flex-pack: center;
     justify-content: center;
   }
+
+  .head-device_mob {
+    bottom: 63px;
+  }
 }
 
 @media (max-width: 998px) {
@@ -1080,11 +1089,18 @@ h4 {
     transform: scaleY(-1) rotate(270deg);
   }
 
+  .head-device_mob {
+    bottom: 10px;
+  }
+
   .price-block {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 
   .price-block_box {
