--- a/app/css/main.css
+++ b/app/css/main.css
@@ -982,6 +982,13 @@ h4 {
     margin-bottom: 30px;
   }
 
+  .menu-menu ul li a:hover {
+    color: #ffae00 !important;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+  }
+
   .team {
     padding: 0 20px;
     -ms-flex-wrap: wrap;
@@ -1114,7 +1121,7 @@ h4 {
   }
 
   .price-block_box__price {
-    border: 1px solid #ffbf37;
+    border: 1px solid #ffbf37 !important;
   }
 
   .price-block_box__butt {
